@@ -27,20 +27,16 @@ class cfgMarkers {
 		color[] = {0,0,0,1};
 	};
 	
-	MARKERINGAME("Attack by Fire (N)",ABF_N);
-	MARKERINGAME("Attack by Fire (E)",ABF_e);
-	MARKERINGAME("Attack by Fire (S)",ABF_s);
-	MARKERINGAME("Attack by Fire (W)",ABF_w);
-	MARKERINGAME("Support by Fire (N)",sbf_n);
-	MARKERINGAME("Support by Fire (E)",SBF_e);
-	MARKERINGAME("Support by Fire (S)",SBF_s);
-	MARKERINGAME("Support by Fire (W)",SBF_w);
+	MARKERINGAME("Attack by Fire",ABF);
+	MARKERINGAME("Support by Fire",SBF);
+    
 	// MARKERINGAME("Secure",secure);
 	// MARKERINGAME("Occupy",occupy);
 	// MARKERINGAME("Retain",retain);
 	// MARKERINGAME("Clear",clear);
 	// MARKERINGAME("Destroy",destroy);
 	// MARKERINGAME("Neutralize",neutralize);
+    
 	class vk_hd_smallDot: hd_objective {
 		name = "Small Dot";
 		icon = "\x\vk_mods\addons\markers\data\simple\hd_smallDot.paa";
