@@ -1,0 +1,6 @@
+class CfgVehicles {
+	class Quadbike_01_base_F;
+	class vk_helper_vehicle: Quadbike_01_base_F {
+		scope = 1;
+	};
+};
