@@ -1,12 +1,15 @@
 // #define DEBUG_MODE_FULL
 #include "script_component.hpp"
 
+/*
 PARAMS_4(_name,_unit,_type,_mods);
 DEFAULT_PARAM(4,_groupSize,-1);
 DEFAULT_PARAM(5,_scale,1);
 DEFAULT_PARAM(6,_visibleTo,nil);
 DEFAULT_PARAM(7,_text,"");
-DEFAULT_PARAM(8,_bft,false);
+*/
+
+params ["_name", "_unit", "_type", "_mods", ["_groupSize",-1,[0]], ["_scale",1,[0]], ["_visibleTo",nil], ["_text","",[""]]];
 
 private ["_pos","_data"];
 
@@ -42,7 +45,6 @@ if ("airunit" in _mods) then {
 		PUSH(_mods,"fuav");
 	};
 };
-
 
 // Special graphics &&/|| combinations
 if (("sam" in _mods || "aaa" in _mods) && !("aa" in _mods)) then {
@@ -95,41 +97,25 @@ if (IS_STRING(_type)) then {
 };
 
 if (IS_ARRAY(_unit)) then { // Positions
-	LOG("Type = ARRAY");
-	_pos = _unit;
-	if (isNil "_visibleTo") then {
-		_visibleTo = [west, east, resistance];
-		// TRACE_1("Default",_visibleTo);
-	};
-	if (!IS_ARRAY(_visibleTo)) then {
-		_visibleTo = [_visibleTo];
-		// TRACE_1("toArray",_visibleTo);
-	};
-	_data = [_name,_mods,_type,_groupSize,_scale,_visibleTo,_text,_pos];
-	TRACE_1("",_data);
-	
-	if (isServer || {GVAR(postInit)}) then {
-		PUSH(GVAR(static_markers),_data);
-		publicVariable QGVAR(static_markers);
-	};
-	if (GVAR(postInit)) then {
-		_data call FUNC(createMarker);
-	};
-	
-	// [QGVAR(globalMarker), _data] call CBA_fnc_GlobalEvent;
-	
-} else { // Units or Groups
-	LOG("Type = UNIT");
-	if (isNil "_visibleTo") then { //ISNILS(_visibleTo, side _unit);
-		_visibleTo = side _unit;
-		// TRACE_1("Default",_visibleTo);
-	};
-	if (!IS_ARRAY(_visibleTo)) then {
-		_visibleTo = [_visibleTo];
-		// TRACE_1("toArray",_visibleTo);
-	};
-	_data = [_name,_mods,_type,_groupSize,_scale,_visibleTo,_text];
-	TRACE_1("",_data);
-	_unit setVariable [QGVAR(markerData),_data,true];
-	_unit setVariable [QGVAR(markerBFT),_bft,true];
+    _pos = [_unit select 0, _unit select 1, -5];
+    _unit = createVehicle ["vk_helper_vehicle",_pos, [], 0, "NONE"];
+	hideObjectGlobal _unit;
+	[0, {_this enableSimulationGlobal false}, _unit] call CBA_fnc_globalExecute;
+    if (isNil "_visibleTo") then {
+        _visibleTo = [west, east, independent];
+    };
+    TRACE_3("Convert array to helper unit",_unit, getpos _unit, _visibleTo);
 };
+
+
+if (isNil "_visibleTo") then {
+    _visibleTo = [side _unit];
+    // TRACE_1("Default",_visibleTo);
+};
+if (!IS_ARRAY(_visibleTo)) then {
+    _visibleTo = [_visibleTo];
+    // TRACE_1("toArray",_visibleTo);
+};
+_data = [_name,_mods,_type,_groupSize,_scale,_visibleTo,_text,_unit];
+TRACE_1("",_data);
+_unit setVariable [QGVAR(markerData),_data,true];
