@@ -1,9 +1,0 @@
-// #define DEBUG_MODE_FULL
-#include "script_component.hpp"
-PARAMS_3(_vehicle,_pos,_unit);
-
-if (_unit == player) then {
-	GVAR(playerBFT) = false;
-	terminate GVAR(getInLoop);
-	// LOG("BFT Off");
-};
